--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.1.1",
     "socket.io": "^4.7.2",
+    "twilio": "^5.0.3",
     "uuid": "^9.0.1"
   },
   "devDependencies": {
