--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "express-validator": "^7.0.1",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.1.1",
+    "nodemailer": "^6.9.13",
     "socket.io": "^4.7.2",
     "twilio": "^5.0.3",
     "uuid": "^9.0.1"
