feat: :sparkles: Nuevo endpoint para conversaciones con ChatGPT a traves de la API
Nuevo endpoint para conversaciones con ChatGPT a traves de la API, guarda las conversaciones y muestra un  numero limitado de mensajes para evitar costes

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,13 @@
-PORT=
+PORT=3001
 DB_CONNECTION=
 PRIVATE_JWT_KEY=
+TWILIO_SID=
+TWILIO_AUTH_TOKEN=
+TWILIO_PHONE_NUMBER=
+
+MAIL_HOST=
+MAIL_PORT=
+MAIL_USERNAME=
+MAIL_PASSWORD=
+MAIL_FROM_NAME=
+MAIL_RECIPIENTS=
